recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:26: error: not found: value mode
    mode(src, dst2)
    ^