recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.code
def hanoi4(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
  if (height > 2) {
    hanoi4(height-2, src, dst1, other, dst2)
    move(src, dst2)
    move(src, other)
    move(dst2, other)
    hanoi4(height-2, dst1, other, src, dst2)
  }
  else {
    move(src, dst2)
    move(src, other)
    move(dst2, other)
  }
}

def splitHanoi(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
  if (height > 2) {
    hanoi4(height-2, src, other, dst1, dst2)
    move(src, dst2)
    move(src, dst1)
    splitHanoi(height-2, other, src, dst1, dst2)
  }
  else {
    move(src, dst1)
    mode(src, dst2)
  }
}